Added routes, errorhandling and serving doc page

--- a/public/doc.html
+++ b/public/doc.html
@@ -9,9 +9,10 @@
   <body>
     <h1>NatureWatch API</h1>
     <p>
-      A movie directory containing nature movies or material related to it. You
-      can search for movies by title, genre, or year. New users can register and
-      login to the site. Users can add movies to their watchlist.
+      A movie directory containing nature movies or movies that feature
+      beautiful landscapes and nature scenes. You can search for movies by
+      title, director, or year. New users can register and login to the site.
+      Users can add movies to their watchlist.
     </p>
   </body>
 </html>
