--- a/public/doc.html
+++ b/public/doc.html
@@ -4,15 +4,201 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="bolt-solid.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&family=Overpass+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Documentation</title>
   </head>
   <body>
-    <h1>NatureWatch API</h1>
-    <p>
-      A movie directory containing nature movies or movies that feature
-      beautiful landscapes and nature scenes. You can search for movies by
-      title, director, or year. New users can register and login to the site.
-      Users can add movies to their watchlist.
-    </p>
+    <header>
+      <h1>NatureWatch</h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="https://google.com">Home</a>
+          </li>
+          <li>
+            <a href="https://reqbin.com/">Test API</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="first-section">
+        <h2>API Documentation</h2>
+        <p>
+          A movie directory containing nature movies or movies that feature
+          beautiful landscapes and nature scenes.
+        </p>
+        <p>
+          You can search for movies by title, director, or year. New users can
+          register and login to the site. Users can add movies to their
+          watchlist.
+        </p>
+        <div class="api-details">
+          <p>Base-Url: http://127.0.0.1:8080/</p>
+          <p>Response content type: <strong>application/json</strong></p>
+        </div>
+      </section>
+      <div class="tabs-menu">
+        <div class="tab" id="movies">/movies</div>
+        <div class="tab" id="users">/users</div>
+      </div>
+
+      <section class="second-section">
+        <div class="movie-wrapper">
+          <h3>Movie Endpoints</h3>
+          <div class="method-wrapper" id="fold">
+            <button class="accordion">
+              <span class="method get">GET</span
+              ><span class="url">&nbsp;<strong>/movies</strong></span
+              >Returns a list of all movies in the database
+            </button>
+            <div class="panel" id="foldout">
+              <p>Returns a list of all movies in the database.</p>
+              <h4>Response:</h4>
+              <pre>
+                <code>
+                   [
+                      {
+                        "id": number,
+                        "title": "string",
+                        "director": "string",
+                        "year": number,
+                      } 
+                    ] 
+                    
+                </code>
+              </pre>
+            </div>
+          </div>
+
+          <div class="method-wrapper" id="fold">
+            <button class="accordion">
+              <span class="method get">GET</span
+              ><span class="url">&nbsp;<strong>/movies/:id</strong></span
+              >Returns a single movie by id
+            </button>
+            <div class="panel" id="foldout">
+              <p>Returns a single movie by id.</p>
+              <h4>Response:</h4>
+              <pre>
+                <code>
+                      {
+                        "id": number,
+                        "title": "string",
+                        "director": "string",
+                        "year": number,
+                      }  
+                </code>
+              </pre>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method get">GET</span
+              ><span class="url"
+                >&nbsp;<strong>/movies/:id/details</strong></span
+              >Returns details of a single movie by id
+            </button>
+            <div class="panel">
+              <p>Returns details of a single movie by id.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method get">GET</span
+              ><span class="url"
+                >&nbsp;<strong>/movies/search/:query</strong></span
+              >Returns a list of movies that match the search query
+            </button>
+            <div class="panel">
+              <p>Returns a list of movies that match the search query.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method get">GET</span
+              ><span class="url"
+                >&nbsp;<strong>/movies/directors/:name</strong></span
+              >Returns information about a director
+            </button>
+            <div class="panel">
+              <p>Returns information about a director.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method post">POST</span
+              ><span class="url"
+                >&nbsp;<strong>/movies/:id/watchlist</strong></span
+              >Adds a movie to the user's watchlist
+            </button>
+            <div class="panel">
+              <p>Adds a movie to the user's watchlist.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method delete">DELETE</span
+              ><span class="url"
+                >&nbsp;<strong>/movies/:id/watchlist/:user_id</strong></span
+              >Removes a movie from the user's watchlist
+            </button>
+            <div class="panel">
+              <p>Removes a movie from the user's watchlist.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="user-wrapper">
+          <h3>User Endpoints</h3>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method post">POST</span
+              ><span class="url">&nbsp;<strong>/users/register</strong></span
+              >Creates a new user
+            </button>
+            <div class="panel">
+              <p>Creates a new user.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method put">PUT</span
+              ><span class="url">&nbsp;<strong>/users/:user_id/</strong></span
+              >Updates a user's information
+            </button>
+            <div class="panel">
+              <p>Updates a user's information.</p>
+            </div>
+          </div>
+
+          <div class="method-wrapper">
+            <button class="accordion">
+              <span class="method delete">DELETE</span
+              ><span class="url">&nbsp;<strong>/users/:user_id/</strong></span
+              >Removes & deregisters a user
+            </button>
+            <div class="panel">
+              <p>Removes & deregisters a user</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script src="./../ui.js"></script>
   </body>
 </html>
