Added missing html classes & ids

--- a/public/doc.html
+++ b/public/doc.html
@@ -100,62 +100,62 @@
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method get">GET</span
               ><span class="url"
                 >&nbsp;<strong>/movies/:id/details</strong></span
               >Returns details of a single movie by id
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Returns details of a single movie by id.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method get">GET</span
               ><span class="url"
                 >&nbsp;<strong>/movies/search/:query</strong></span
               >Returns a list of movies that match the search query
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Returns a list of movies that match the search query.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method get">GET</span
               ><span class="url"
                 >&nbsp;<strong>/movies/directors/:name</strong></span
               >Returns information about a director
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Returns information about a director.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method post">POST</span
               ><span class="url"
                 >&nbsp;<strong>/movies/:id/watchlist</strong></span
               >Adds a movie to the user's watchlist
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Adds a movie to the user's watchlist.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method delete">DELETE</span
               ><span class="url"
                 >&nbsp;<strong>/movies/:id/watchlist/:user_id</strong></span
               >Removes a movie from the user's watchlist
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Removes a movie from the user's watchlist.</p>
             </div>
           </div>
@@ -164,35 +164,35 @@
         <div class="user-wrapper">
           <h3>User Endpoints</h3>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method post">POST</span
               ><span class="url">&nbsp;<strong>/users/register</strong></span
               >Creates a new user
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Creates a new user.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method put">PUT</span
               ><span class="url">&nbsp;<strong>/users/:user_id/</strong></span
               >Updates a user's information
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Updates a user's information.</p>
             </div>
           </div>
 
-          <div class="method-wrapper">
+          <div class="method-wrapper" id="fold">
             <button class="accordion">
               <span class="method delete">DELETE</span
               ><span class="url">&nbsp;<strong>/users/:user_id/</strong></span
               >Removes & deregisters a user
             </button>
-            <div class="panel">
+            <div class="panel" id="foldout">
               <p>Removes & deregisters a user</p>
             </div>
           </div>
