Fix wrong html class

--- a/public/doc.html
+++ b/public/doc.html
@@ -78,7 +78,7 @@
             </div>
           </div>
 
-          <div class="method-wrapper get-item" id="fold">
+          <div class="method-wrapper" id="fold">
             <button class="accordion get-item">
               <span class="method get">GET</span
               ><span class="url">&nbsp;<strong>/movies/:id</strong></span
